# aws-panorama-samples-test

./: .gitignore  pyproject.toml
samples/people_counter/: people_counter_tutorial.ipynb
